[tool.poetry]
name = "poetry-streamlit-search-app"
version = "0.1.0"
description = "A Streamlit app to search and filter data from a JSON file with dynamic sidebar options."
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.12"
streamlit = "^1.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 